# Zener-Card-Trainer

./: DEMO.html  LICENSE  help.html  index.html  zener.html
help_files/: filelist.xml
tauri/: BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_CROSS_PLATFORM.md  CROSS_PLATFORM_SUMMARY.md  PLATFORM_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  START_HERE.md  package (conflicted).json  package.json  quick-build.bat  quick-build.sh  quick-dev.bat  quick-dev.sh
tauri/scripts/: platform-utils.js
tauri/src/: LICENSE  ZZZ-COPY WEBAPP FILES HERE-ZZZ.txt  help.html  index.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: README.md  icon.icns
